Sutter Health/src/objects/Employer_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historical Read-Only Employer Activities</relationshipLabel>
        <relationshipName>Employer_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>12-Week Stress Less</fullName>
                </value>
                <value>
                    <fullName>12-Week Weight Management</fullName>
                </value>
                <value>
                    <fullName>4-Week DeStress Your Work</fullName>
                </value>
                <value>
                    <fullName>4-Week Hydration</fullName>
                </value>
                <value>
                    <fullName>6-Month Weight Management</fullName>
                </value>
                <value>
                    <fullName>Biometrics Full</fullName>
                </value>
                <value>
                    <fullName>Biometrics Full + Flu Shots/Vaccinations</fullName>
                </value>
                <value>
                    <fullName>Biometrics Light</fullName>
                </value>
                <value>
                    <fullName>Biometrics Light + Flu Shots/Vaccinations</fullName>
                </value>
                <value>
                    <fullName>Breast cancer</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Diabetes prevention</fullName>
                </value>
                <value>
                    <fullName>Dine on Nine – fruits and vegetable series</fullName>
                </value>
                <value>
                    <fullName>Drawings</fullName>
                </value>
                <value>
                    <fullName>Fitness Challenges</fullName>
                </value>
                <value>
                    <fullName>Flu Shots/Vaccinations</fullName>
                </value>
                <value>
                    <fullName>Headache management</fullName>
                </value>
                <value>
                    <fullName>Health &amp;Wellness Fairs</fullName>
                </value>
                <value>
                    <fullName>Healthy heart</fullName>
                </value>
                <value>
                    <fullName>Healthy pregnancy</fullName>
                </value>
                <value>
                    <fullName>HRAs</fullName>
                </value>
                <value>
                    <fullName>Livestream Webinar</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Learns</fullName>
                </value>
                <value>
                    <fullName>Overcoming healthy lifestyle obstacles</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Smoking cessation</fullName>
                </value>
                <value>
                    <fullName>Tobacco cessation</fullName>
                </value>
                <value>
                    <fullName>Weight Loss Challenges</fullName>
                </value>
                <value>
                    <fullName>Wellness Surveys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Digital Campaigns</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Wellness Screenings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <formula>Assigned_To__r.FirstName</formula>
        <label>Assigned To User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Employer_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMI__c</fullName>
        <label>BMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_Pressure__c</fullName>
        <label>Blood Pressure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Fat__c</fullName>
        <label>Body Fat %</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cholesterol_Sub_Types__c</fullName>
        <label>Cholesterol Sub Types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cholesterol__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TC</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>LDL</fullName>
                </value>
                <value>
                    <fullName>Triglycerides</fullName>
                </value>
                <value>
                    <fullName>Lipid Panel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cholesterol__c</fullName>
        <label>Cholesterol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fasting</fullName>
                </value>
                <value>
                    <fullName>Non-Fasting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>County__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>American Canyon</fullName>
                </value>
                <value>
                    <fullName>Antelope</fullName>
                </value>
                <value>
                    <fullName>Antioch</fullName>
                </value>
                <value>
                    <fullName>Arbuckle</fullName>
                </value>
                <value>
                    <fullName>Atherton</fullName>
                </value>
                <value>
                    <fullName>Atwater</fullName>
                </value>
                <value>
                    <fullName>Auburn</fullName>
                </value>
                <value>
                    <fullName>Belmont</fullName>
                </value>
                <value>
                    <fullName>Belvedere</fullName>
                </value>
                <value>
                    <fullName>Benicia</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Brentwood</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Burlingame</fullName>
                </value>
                <value>
                    <fullName>Calistoga</fullName>
                </value>
                <value>
                    <fullName>Cameron Park</fullName>
                </value>
                <value>
                    <fullName>Campbell</fullName>
                </value>
                <value>
                    <fullName>Capitola</fullName>
                </value>
                <value>
                    <fullName>Carmichael</fullName>
                </value>
                <value>
                    <fullName>Castro Valley</fullName>
                </value>
                <value>
                    <fullName>Ceres</fullName>
                </value>
                <value>
                    <fullName>Citrus Heights</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>Clearlake</fullName>
                </value>
                <value>
                    <fullName>Cloverdale</fullName>
                </value>
                <value>
                    <fullName>Colfax</fullName>
                </value>
                <value>
                    <fullName>Colma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Cost__c</fullName>
        <label>Client Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda County</fullName>
                </value>
                <value>
                    <fullName>Amador County</fullName>
                </value>
                <value>
                    <fullName>Calavares County</fullName>
                </value>
                <value>
                    <fullName>Colusa County</fullName>
                </value>
                <value>
                    <fullName>Contra Costa County</fullName>
                </value>
                <value>
                    <fullName>El Dorado County</fullName>
                </value>
                <value>
                    <fullName>Lake County</fullName>
                </value>
                <value>
                    <fullName>Marin County</fullName>
                </value>
                <value>
                    <fullName>Merced County</fullName>
                </value>
                <value>
                    <fullName>Monterey County</fullName>
                </value>
                <value>
                    <fullName>Napa County</fullName>
                </value>
                <value>
                    <fullName>Nevada County</fullName>
                </value>
                <value>
                    <fullName>Placer County</fullName>
                </value>
                <value>
                    <fullName>Sacramento County</fullName>
                </value>
                <value>
                    <fullName>San Francisco County</fullName>
                </value>
                <value>
                    <fullName>San Joaquin County</fullName>
                </value>
                <value>
                    <fullName>San Mateo County</fullName>
                </value>
                <value>
                    <fullName>Santa Clara County</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz County</fullName>
                </value>
                <value>
                    <fullName>Solano County</fullName>
                </value>
                <value>
                    <fullName>Sonoma County</fullName>
                </value>
                <value>
                    <fullName>Stanislaus County</fullName>
                </value>
                <value>
                    <fullName>Sutter County</fullName>
                </value>
                <value>
                    <fullName>Yolo County</fullName>
                </value>
                <value>
                    <fullName>Yuba County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Date__c</fullName>
        <label>First Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flu_completed__c</fullName>
        <label>Flu # Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Meeting_Details_For_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up Meeting Details For Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_with_Broker_For_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up with Broker For Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Glucose__c</fullName>
        <label>Glucose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fasting</fullName>
                </value>
                <value>
                    <fullName>Non-Fasting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height_Weight__c</fullName>
        <label>Height/Weight</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_prticipants__c</fullName>
        <label>No. Of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Interest__c</fullName>
        <label>Participation Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fitness Activity</fullName>
                </value>
                <value>
                    <fullName>Healthy Eating</fullName>
                </value>
                <value>
                    <fullName>Take the Stairs</fullName>
                </value>
                <value>
                    <fullName>Tobacco cessation</fullName>
                </value>
                <value>
                    <fullName>Walking Program</fullName>
                </value>
                <value>
                    <fullName>Weight Loss Challenge</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Please_Specify_Other__c</fullName>
        <label>Please Specify Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Points_Detail__c</fullName>
        <label>Points Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <label>Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Employer_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Employer Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_on_Upcoming_renewals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder on Upcoming Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Welcome_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Welcome Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Line_Product_Promotion__c</fullName>
        <label>Service Line/Product Promotion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>Lung Nodule Clinic</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Occupational Medicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>SHP (Sutter Health Plus)</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Womens and Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Activities__c</fullName>
        <label>Sub Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Activities__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>BMI/BF</fullName>
                </value>
                <value>
                    <fullName>Body Fat</fullName>
                </value>
                <value>
                    <fullName>Cholesterol</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Ethnic health</fullName>
                </value>
                <value>
                    <fullName>Glucose</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>Health Fair</fullName>
                </value>
                <value>
                    <fullName>Healthy living</fullName>
                </value>
                <value>
                    <fullName>Heart</fullName>
                </value>
                <value>
                    <fullName>Height/weight</fullName>
                </value>
                <value>
                    <fullName>Hydration</fullName>
                </value>
                <value>
                    <fullName>LDL</fullName>
                </value>
                <value>
                    <fullName>Mental health</fullName>
                </value>
                <value>
                    <fullName>Men’s health</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Screenings</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Stress</fullName>
                </value>
                <value>
                    <fullName>Total Cholesterol</fullName>
                </value>
                <value>
                    <fullName>Trig</fullName>
                </value>
                <value>
                    <fullName>Waist Circumference</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
                <value>
                    <fullName>Women’s health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TB_completed__c</fullName>
        <label>TB # Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Cost__c</fullName>
        <label>Vendor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Health Appraisals</fullName>
                </value>
                <value>
                    <fullName>Maxim Health Systems</fullName>
                </value>
                <value>
                    <fullName>Sutter Affiliate Staff</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waist_Circumference__c</fullName>
        <label>Waist Circumference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Screenings_Completed__c</fullName>
        <label># of Screenings Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employer Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Activity_Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>BMI__c</columns>
        <columns>Body_Fat__c</columns>
        <columns>Cholesterol__c</columns>
        <columns>Cholesterol_Sub_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Employer Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employer Activities</pluralLabel>
    <recordTypes>
        <fullName>Annual_Action_Plan</fullName>
        <active>true</active>
        <description>Record type for Annual Action Plan Employer Activity.</description>
        <label>Annual Action Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_and_Wellness_Committee_Participation</fullName>
        <active>true</active>
        <description>Record type for Health and Wellness Committee Participation Employer Activity.</description>
        <label>General Employer Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Signed_Agreement_Activities</fullName>
        <active>true</active>
        <description>Record type for Signed Agreement .</description>
        <label>Signed Agreement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Other_Sub_Activities_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName=&apos;Health_and_Wellness_Committee_Participation&apos;, AND(ISBLANK(Please_Specify_Other__c) , INCLUDES(Sub_Activities__c, &apos;Other&apos;)))</errorConditionFormula>
        <errorDisplayField>Please_Specify_Other__c</errorDisplayField>
        <errorMessage>Please specify sub activity when Other is selected.</errorMessage>
    </validationRules>
</CustomObject>